--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = { version = "0.10.1", features = ["dynamic_linking"] }
-bevy-inspector-egui = "0.18.1"
+bevy = { version = "0.15.0" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
